@@ -1,5 +1,17 @@
+
 08.22.2005
 	* Changed NewCell to Cell to match the cleanup in nbdoc --antont
+
+	* Fixed some UI glitches
+
+	* Added a CellCtrlBase class which will be a base class for all
+	controlls used for displaying parts of the notebook
+
+	* Added mouse wheel support
+
+	* Added proper support for deleting characters in a Python code
+	block using the Delete and Backspace keys
+	
 
 08.18.2005:
 	* Fixed a bug in DeleteCell
